--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ before_install:
   - export PATH="${RACKET_DIR}/bin:${PATH}"
 
 script:
-  - make install && make test
+	- /usr/racket/bin/raco pkg install --force -n aperetif -t dir lib/
+	- /usr/racket/bin/raco test --drdr .
