--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_install:
 
 script:
   - /usr/racket/bin/raco pkg install --force -n aperetif -t dir lib/
-  - /usr/racket/bin/raco test --drdr .
+  - /usr/racket/bin/raco test .
